...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <!-- No data TextView -->
      <TextView
        android:id="@+id/noDataTextView"
        style="@style/RemindersFragment.TextView"
        android:fadeVisible="@{viewModel.showNoData.booleanValue()}"
        app:drawableTopCompat="@drawable/ic_no_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

      <!-- Add Reminders Button -->
      <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addReminderFAB"
        style="@style/RemindersFragment.RemindersButton"
        android:contentDescription="@string/button_text_add_reminder"
        app:fabSize="normal"
        app:layout_anchor="@id/remindersRecyclerView"
        app:layout_anchorGravity="bottom|right|end"
        app:layout_constraintBottom_toBottomOf="parent"
...
