...
  </data>

  <!-- Constraint Layout -->
  <androidx.constraintlayout.widget.ConstraintLayout style="@style/SelectLocationFragment.ConstraintLayout">

    <androidx.fragment.app.FragmentContainerView
      android:id="@+id/map"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:contentDescription="@string/google_map"
      android:name="com.google.android.gms.maps.SupportMapFragment" />

  </androidx.constraintlayout.widget.ConstraintLayout>
...
